# ShiftIntrinsicGuide

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.md
cmake/: DeployQt.cmake
include/: Application.h  CategoryModel.h  DataModel.h  DataProvider.h  Downloader.h  InternalData.h  IntrinsicModel.h  IntrinsicProxyModel.h  MeasurementModel.h  TechnologyModel.h  TypeModel.h  Version.h.in
source/: Application.cpp  CategoryModel.cpp  DataModel.cpp  DataProvider.cpp  Downloader.cpp  IntrinsicModel.cpp  IntrinsicProxyModel.cpp  IntrinsicView.qml  MeasurementModel.cpp  MenuView.qml  Page1.qml  Resources.qrc  TechnologyModel.cpp  TypeModel.cpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
